--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= vehicle.reg_no %></td>
         <td><%= vehicle.status %></td>
-        <td><%= vehicle.current_city.name %></td>
+        <td><%= vehicle.current_city_name %></td>
         <td><%= vehicle.driver_name %></td>
         <td><%= vehicle.driver_email %></td>
         <td><%= vehicle.driver_mobile %></td>
